<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".MakeCardsFragment">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="20dp"
        android:paddingTop="20dp">

            <EditText
                android:id="@+id/cardTitle_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/card_title"
                android:inputType="text"
                app:layout_constraintRight_toRightOf="parent" />

            <EditText
                android:id="@+id/displayName_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/display_name"
                android:inputType="text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cardTitle_editText" />

            <EditText
                android:id="@+id/cellNumber_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/cell_phone"
                android:inputType="phone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/displayName_editText" />

            <EditText
                android:id="@+id/workNumber_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/work_phone"
                android:inputType="phone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/cellNumber_editText" />

            <EditText
                android:id="@+id/homeNumber_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/home_phone"
                android:inputType="phone"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/workNumber_editText" />

            <EditText
                android:id="@+id/personalEmail_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/personal_email"
                android:inputType="textEmailAddress"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/homeNumber_editText" />

            <EditText
                android:id="@+id/workEmail_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/work_email"
                android:inputType="textEmailAddress"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/personalEmail_editText" />

            <EditText
                android:id="@+id/website_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/website_"
                android:inputType="text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/workEmail_editText" />


            <EditText
                android:id="@+id/linkedin_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/linkedin"
                android:inputType="text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/website_editText" />

            <EditText
                android:id="@+id/facebook_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/facebook"
                android:inputType="text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/linkedin_editText" />

            <EditText
                android:id="@+id/twitter_editText"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/twitter"
                android:inputType="text"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/facebook_editText" />

            <TextView
                android:id="@+id/cardTitle_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/card_title_"
                app:layout_constraintBaseline_toBaselineOf="@id/cardTitle_editText" />

            <TextView
                android:id="@+id/displayName_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/display_name_"
                app:layout_constraintBaseline_toBaselineOf="@id/displayName_editText" />

            <TextView
                android:id="@+id/cellNumber_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cell_phone_"
                app:layout_constraintBaseline_toBaselineOf="@id/cellNumber_editText" />

            <TextView
                android:id="@+id/workNumber_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_phone_"
                app:layout_constraintBaseline_toBaselineOf="@id/workNumber_editText" />


            <TextView
                android:id="@+id/homeNumber_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/home_phone_"
                app:layout_constraintBaseline_toBaselineOf="@id/homeNumber_editText" />


            <TextView
                android:id="@+id/personalEmail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/personal_email_"
                app:layout_constraintBaseline_toBaselineOf="@id/personalEmail_editText" />

            <TextView
                android:id="@+id/workEmail_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/work_email_"
                app:layout_constraintBaseline_toBaselineOf="@id/workEmail_editText" />

            <TextView
                android:id="@+id/website_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/website_"
                app:layout_constraintBaseline_toBaselineOf="@id/website_editText" />


            <TextView
                android:id="@+id/linkedin_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/linkedin_"
                app:layout_constraintBaseline_toBaselineOf="@id/linkedin_editText" />

            <TextView
                android:id="@+id/facebook_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/facebook_"
                app:layout_constraintBaseline_toBaselineOf="@id/facebook_editText" />

            <TextView
                android:id="@+id/twitter_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/twitter_"
                app:layout_constraintBaseline_toBaselineOf="@id/twitter_editText" />

            <Button
                android:id="@+id/create_Button"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Create Card"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/twitter_editText"/>

        </android.support.constraint.ConstraintLayout>
</ScrollView>