<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUpActivity"
    android:id="@+id/relativeLayout">

    <TextView
        android:id="@+id/email_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:text="@string/email"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintRight_toRightOf="@id/confirm_textView" />

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:text="@string/password"
        app:layout_constraintTop_toBottomOf="@id/email_textView"
        app:layout_constraintRight_toRightOf="@id/confirm_textView" />

    <TextView
        android:id="@+id/confirm_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:text="@string/confirm"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_textView" />

    <EditText
        android:id="@+id/email_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        app:layout_constraintLeft_toRightOf="@id/email_textView"
        app:layout_constraintBaseline_toBaselineOf="@id/email_textView" />

    <EditText
        android:id="@+id/password_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        app:layout_constraintBaseline_toBaselineOf="@id/password_textView"
        app:layout_constraintTop_toBottomOf="@id/email_editText"
        app:layout_constraintLeft_toLeftOf="@+id/email_editText" />

    <EditText
        android:id="@+id/confirm_editView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:hint="@string/confirm"
        android:ems="10"
        android:inputType="textPassword"
        app:layout_constraintBaseline_toBaselineOf="@id/confirm_textView"
        app:layout_constraintTop_toBottomOf="@id/password_editText"
        app:layout_constraintLeft_toLeftOf="@id/email_editText" />

    <Button
        android:id="@+id/register_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/register"
        app:layout_constraintTop_toBottomOf="@id/confirm_editView"
        app:layout_constraintRight_toRightOf="@id/confirm_editView" />


</android.support.constraint.ConstraintLayout>
